# MCLC

./: .gitignore  CMakeLists.txt  LICENSE
conan/: CMakeLists.txt  conanfile.txt
include/: httplib.h
src/: CMakeLists.txt  MCLC.cpp  coremain.cpp
src/config/: config.cpp  config.h
src/core/: Logger.cpp  Logger.h
src/download/: .json  downloader.cpp  downloader.h  downloadexception.h  minecraft.cpp  minecraft.h  urlutil.cpp  urlutil.h
src/download/mirror/: mirror.h  mirrors.cpp  mirrors.h
src/network/: Downloader.cpp  Downloader.h  HttpUtil.cpp  HttpUtil.h
src/utils/: system.cpp  system.h
